--- a/css/global-1.css
+++ b/css/global-1.css
@@ -29,7 +29,7 @@
     padding; 0;
 }
 nav{
-    background: color(srgb);
+
     padding: 7 rem;
 }
 nav ul {
@@ -74,6 +74,6 @@ body{
     
 h2{
     font-family:Permanent Marker;
-    size:
+    font-size: xx-large;
 
 }
